--- a/style.css
+++ b/style.css
@@ -23,12 +23,12 @@ header h1{
   flex-wrap: wrap;
   justify-content: space-evenly;
   gap: 2vw;
-  padding: 0 2vw;
+  padding: 0 2vw; /*vai dar um espaço na foto da parede*/
 }
 .galeria-items{
   width: 350px;
   height: 350px;
-  border: 5px solid #FFF;
+  border: 2px solid #FFF;
   box-shadow: 5px 5px 5px #0006;
   flex-grow: 1;
   transition: transform .5s linear;
@@ -36,7 +36,7 @@ header h1{
 .galeria-items img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: cover; /*tirando isso a img vai ficar do tamnho da quadrado*/
 }
 
 .galeria-items:hover{
