--- a/style.css
+++ b/style.css
@@ -41,13 +41,47 @@ header h1{
   object-fit: cover; /*tirando isso a img vai ficar do tamnho da quadrado*/
 }
 
+.galeria-ultima img {
+  width: 100%;
+  height: 100%;
+}
 
 /*efeito*/
 .galeria-items:hover{
   transform: scale(1.03); /*efeito que aumenta o tamanho da img*/
 }
 
+.container{
+  display:grid;
+  grid-template-columns: repeat(3, 2fr); /* vai determinar linha a e coluna */
+  grid-auto-rows:500px 500px;/* vai aumentar o tamanho das img de uma culuna */
+  grid-gap:0px; /* vai dar um pequeno espeço nas img*/
+  grid-auto-flow: dense;
+}
 
+/* vai deixar as img enquadrada */
+.gallery-item{
+  width:100%;
+  height:100%;
+  position:relative;
+}
+
+
+.gallery-item .image{
+  width:100%;
+  height:100%;
+  overflow:hidden;
+}
+
+
+.gallery-item .image img{
+  width:100%;
+  height:100%;
+  object-fit: cover;
+  object-position:50% 50%;
+  cursor:pointer;
+  transition:.5s ease-in-out;
+}
 
 footer {
   height: 100px;
