--- a/style.css
+++ b/style.css
@@ -91,3 +91,11 @@ footer {
   color: #000;
   font-style: italic;
 }
+
+
+/* ---------- */
+/* ---------- */
+/* ---------- */
+/* ---------- */
+/* ---------- */
+/* ---------- */
