--- a/style.css
+++ b/style.css
@@ -242,3 +242,42 @@ footer {
       top:50%;
   }
 }
+
+/* ---------- */
+/* ---------- */
+/* ---------- */
+/* ---------- */
+/* ---------- */
+/* ---------- */
+/* ---------- */
+
+
+
+
+/* fotos com comentarios*/
+.container-2 {
+  margin: 40px auto;
+  max-width: 1200px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-column-gap: 20px;
+  grid-row-gap: 40px;
+  justify-content: center;
+  padding: 0 20px;
+
+}
+
+.polaroid {
+  background: white;
+  padding: 15px 15px 40px;
+}
+
+.photo {
+  width: 100%;
+  height: 290px;
+  object-fit: cover;
+}
+
+.caption {
+  margin-top: 10px;
+}
