--- a/style.css
+++ b/style.css
@@ -256,28 +256,28 @@ footer {
 
 /* fotos com comentarios*/
 .container-2 {
-  margin: 40px auto;
+  margin: 10px auto;
   max-width: 1200px;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  grid-column-gap: 20px;
-  grid-row-gap: 40px;
+  grid-column-gap: 2px;
+  grid-row-gap: 2px;
   justify-content: center;
-  padding: 0 20px;
+  padding: 0 10px;
 
 }
 
 .img-1 {
   background: white;
-  padding: 15px 15px 40px;
+  padding: 10px 10px 20px;
 }
 
-.photo {
+.foto-c {
   width: 100%;
   height: 290px;
   object-fit: cover;
 }
 
-.caption {
+.comentarios {
   margin-top: 10px;
 }
