--- a/style.css
+++ b/style.css
@@ -281,3 +281,54 @@ footer {
 .comentarios {
   margin-top: 5px;
 }
+
+/* ---------- */
+/* ---------- */
+/* ---------- */
+/* ---------- */
+/* ---------- */
+/* ---------- */
+/* ---------- */
+
+.ultima-1 {
+  margin: 2px auto;
+  max-width: 1000px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(700px, 1fr));
+  grid-column-gap: 2px;
+  grid-row-gap: 2px;
+  justify-content: center;
+  padding: 0 1px;
+  
+}
+
+.img-2 {
+    background: white;
+    padding: 1px 1px 1px;
+}
+
+.foto-c2 {
+  width: 100%;
+  height: 350px;
+  object-fit: cover;
+}
+
+/* ---------- */
+/* ---------- */
+/* ---------- */
+/* ---------- */
+/* ---------- */
+/* ---------- */
+/* ---------- */
+
+.ultima-2 {
+  
+}
+
+.img-3{
+ 
+}
+
+.foto-c3 img{
+  
+}
