--- a/style.css
+++ b/style.css
@@ -356,3 +356,12 @@ footer {
   object-fit: cover;
   
 }
+
+/* ---------- */
+/* ---------- */
+/* ---------- */
+/* ---------- */
+/* ---------- */
+/* ---------- */
+/* ---------- */
+
