--- a/style.css
+++ b/style.css
@@ -448,9 +448,10 @@ footer {
 /* ---------- */
 /* ---------- */
 
-.container-t-css-3{
+
+.container-t-css-1{
   display:grid;
-  grid-template-columns: repeat(2, 1fr); /* vai determinar linha a e coluna */
+  grid-template-columns: repeat(3, 1fr); /* vai determinar linha a e coluna */
   grid-auto-rows:480px 280px;/* vai aumentar o tamanho das img de uma culuna */
   grid-gap:1px; /* vai dar um pequeno espeço nas img - no meio*/
   grid-auto-flow: dense;
@@ -475,20 +476,20 @@ footer {
 .galeria-css-3 .image2 img{
   width:100%;
   height:100%;
-  object-fit: cover; /*  --- object-fit: cover ---- vai completar a caixa se tirar */
+  object-fit: cover;/*  --- object-fit: cover; ---- vai completar a caixa se tirar */
   object-position:50% 50%;
   cursor:pointer;
   transition:.5s ease-in-out;
 }
 
 /* efeito de aumentar a img um pouco quando o mouse tiver em cima */
-.galeria-css-3 .image2 img{
+.galeria-css-3:hover .image2 img{
   transform:scale(1.05); /* vai dar uma leve aumentada */
 }
 
 
 /* efeito das img */
-.galeria-css-3 .text2{
+.galeria-css-3 .text1{
   opacity:0; /*se nao tiver isso vai aparecer o texto*/
   position:absolute;
   top:50%;/* vai ficar o texto no meio*/
@@ -507,7 +508,7 @@ footer {
   
 }
 
-.galeria-css-3:hover .text2{
+.galeria-css-3:hover .text1{
   opacity:1;
   animation: move-down .3s linear; /* o text vai baixar devagar*/
    /*
@@ -515,11 +516,3 @@ footer {
    width:100%;
    */
 }
-.mts{
-  grid-row: span 1;
-}
-
-.mt3{
-  grid-column: span 1;
-}
-
