--- a/style.css
+++ b/style.css
@@ -516,3 +516,13 @@ footer {
    width:100%;
    */
 }
+
+
+/* ---------- */
+/* ---------- */
+/* ---------- */
+/* ---------- */
+/* ---------- */
+/* ---------- */
+
+
